--- a/index-2.html
+++ b/index-2.html
@@ -14,27 +14,37 @@
             <div class="logo-edit">
                 <p>Bệnh Viện Hải châu</p>
             </div>
-            <ul  class="list-unstyled">
+            <ul class="list-unstyled">
                 <div class="section">NAVIGATION</div>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index-2.html">Trang 2</a></li>
-                <li><a href="#">Item 4</a></li>
-                <li><a href="#">Item 5</a></li>
-                <li><a href="#">Item 6</a></li>
+                <li><a href="index.html"><i class='bx bx-list-ul' ></i>Danh sách yêu cầu</a></li>
+                <li><a href="index-2.html" style="color: rgb(30, 233, 16);"><i class="ri-file-list-line"></i>Quản lý thiết bị</a></li>
+                <li><a href="#"><i class='bx bxs-add-to-queue'></i>Xử lý nhập</a></li>
+                <li><a href="#"><i class="ri-file-reduce-fill"></i>Xử lý xuất</a></li>
+                <li><a href="#"><i class="ri-bar-chart-box-fill"></i>Thống kê</a></li>
+                <li><a href="#"><i class='bx bx-cog'></i>Cài đặt</a></li>
             </ul>
         </div>
         <div class="content">
-            <div class="container">
-                <div class="header d-flex justify-content-between align-items-center">
-                  <div class="search">
-                    <input type="text" placeholder="Tìm kiếm">
-                  </div>
-                  <button>Lọc</button>
-                  <div class="notification">Thông báo</div>
-                  <div class="account">Tài khoản</div>
-                  <div class="account">Tài khoản</div>
+            <div class="header">
+                <div class="search-header">
+                    <div class="input-search">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                            <div class="input-group-append">
+                                <button class="btn btn-success" type="submit">Go</button>
+                            </div>
+                        </div>
+                    </div>
+                    <button id="filter-header"><i class='bx bx-filter-alt'></i>Lọc</button>
                 </div>
-              </div>
+                <div class="main">
+                    <a href="#" class="notification"><i class='bx bxs-bell-ring'></i></a>
+                    <div class="account-user">
+                        <img src="images/person.png" alt="" class="">
+                        <a href="#"></i>Tài khoản</a>
+                    </div>
+                </div>
+            </div>
             <div class="product-list">
 
                 <div class="product-item">
