--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <div class="container-1">
         <div class="sidebar">
             <div class="logo-edit">
-                <p>Bệnh Viện Hải châu</p>
+                <img src="images/logo.jpg" >
+                <p>BỆNH VIỆN HẢI CHÂU</p>
             </div>
             <ul class="list-unstyled">
                 <div class="section">NAVIGATION</div>
